Adding API, changing theme and adding favorites api

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -1,3 +1,8 @@
 <main-nav>
+  <h2>Home</h2>
+
+  <!-- <mat-card *ngFor="let favorite of this.favorites.load()">
+   
+  </mat-card> -->
   
 </main-nav>
