--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$primary: mat-palette($mat-grey, 900);
-$accent: mat-palette($mat-light-blue, 700);
+$primary: mat-palette($mat-light-blue, 900);
+$accent: mat-palette($mat-light-blue, A400);
 $warn: mat-palette($mat-red);
 
 $theme: mat-light-theme($primary, $accent, $warn);
