--- a/src/app/station-card/station-card.component.html
+++ b/src/app/station-card/station-card.component.html
@@ -1,8 +1,26 @@
 <mat-card>
-  <mat-card-title>{{ station.name }}</mat-card-title>
-  <mat-card-subtitle>{{ station.municipality }} ({{ station.area }})</mat-card-subtitle>
+  <mat-card-header>
+    <mat-card-title>{{ station.name }}</mat-card-title>
+    <mat-card-subtitle>{{ station.municipality }} {{ station.area ? "(" + station.area + ")" : "" }}</mat-card-subtitle>
 
-  <mat-card-content>
+    <div class="spacer"></div>
+
+    <button mat-icon-button (click)="toggleOpen()">
+      <mat-icon *ngIf="!opened">expand_more</mat-icon>
+      <mat-icon *ngIf="opened">expand_less</mat-icon>
+    </button>
+    
+    <a [href]="'https://maps.google.com/maps?q=' + station.latitude + ',' + station.longitude + '&hl=en;z=14;output=embed'" target="_blank" mat-icon-button>
+      <mat-icon>map</mat-icon>
+    </a>
+
+    <button mat-icon-button (click)="toggleFavorite()" id="btn_add_favorite">
+      <mat-icon *ngIf="favorites.is(station.id)">star</mat-icon>
+      <mat-icon *ngIf="!favorites.is(station.id)">star_border</mat-icon>
+    </button>
+  </mat-card-header>
+
+  <mat-card-content *ngIf="opened">
     <mat-list>
       <mat-list-item *ngFor="let record of records">
         <i mat-list-icon [class]="record.name | weatherIcon" [matTooltip]="record.name | normalcase" matTooltipPosition="after"></i>
@@ -10,15 +28,9 @@
         <h4 mat-line *ngIf="record.name == 'wind-direction'">{{ record.value | direction }} ({{ record.value }}{{ record.unit }})</h4>
         <p mat-line>{{ record.timestamp | date:'medium' }}</p>
       </mat-list-item>
+      <mat-list-item *ngIf="records != null && records.length == 0">No data</mat-list-item>
     </mat-list>
 
     <mat-spinner style="margin: 0 auto;" diameter="30" color="accent" *ngIf="records == null"></mat-spinner>
   </mat-card-content>
-
-  <mat-card-actions>
-    <button mat-icon-button (click)="favorites.toggle(station.id)">
-      <mat-icon *ngIf="favorites.is(station.id)">star</mat-icon>
-      <mat-icon *ngIf="!favorites.is(station.id)">star_border</mat-icon>
-    </button>
-  </mat-card-actions>
 </mat-card>
