--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -5,9 +5,10 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/home" routerLinkActive="current"><i class="material-icons">home</i> Home</a>
-      <a mat-list-item routerLink="/favorites" routerLinkActive="current"><i class="material-icons">star</i> Favorites</a>
-      <a mat-list-item routerLink="/search" routerLinkActive="current"><i class="material-icons">search</i> Search</a>
+      <a mat-list-item routerLink="/home" routerLinkActive="current"><mat-icon>home</mat-icon> Home</a>
+      <a mat-list-item routerLink="/favorites" routerLinkActive="current"><mat-icon>star</mat-icon> Favorites</a>
+      <a mat-list-item routerLink="/graph" routerLinkActive="current"><mat-icon>show_chart</mat-icon> Graph</a>
+      <a mat-list-item routerLink="/search" routerLinkActive="current"><mat-icon>search</mat-icon> Search</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
