Added settings service; Added settings page; Small changes/fixes

--- a/src/app/page-home/page-home.component.html
+++ b/src/app/page-home/page-home.component.html
@@ -4,6 +4,6 @@
   <section id="random_data">
     <station-card [station]="station" preload="false" *ngFor="let station of random_stations"></station-card>
 
-    <mat-spinner style="margin: 0 auto;padding:5%" diameter="50" color="accent" *ngIf="random_stations == null"></mat-spinner>
+    <mat-spinner style="margin: 0 auto" diameter="50" color="accent" *ngIf="random_stations == null"></mat-spinner>
   </section>
 </main-nav>
