--- a/src/app/page-settings/page-settings.component.html
+++ b/src/app/page-settings/page-settings.component.html
@@ -1,3 +1,31 @@
 <main-nav>
   <h2>Settings</h2>
+
+  <form [formGroup]="settingsForm">
+    <mat-card>
+      <mat-card-header>
+        <mat-icon mat-card-avatar>view_stream</mat-icon>
+        <mat-card-title>Random locations on homepage</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-form-field>
+          <input matInput type="number" formControlName="home_amount" />
+          <mat-error *ngIf="home_amount.invalid && home_amount.touched">Only numbers are allowed</mat-error>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        <mat-icon mat-card-avatar>view_stream</mat-icon>
+        <mat-card-title>Maximum age of cache</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-form-field>
+          <input matInput type="number" formControlName="cache_max_age" />
+          <mat-error *ngIf="cache_max_age.invalid && cache_max_age.touched">Only numbers are allowed</mat-error>
+          <span matSuffix>min</span>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
+  </form>
 </main-nav>
